# selenium-to-playwright-pytest-automation-framework

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: ci.yml
config/: sites.py
pages/: __init__.py  entry_ad_page.py  forgot_password_page.py  hovers_page.py  iframe_page.py  infinite_scroll_page.py  javascript_alerts_page.py  javascript_error_page.py  jqueryui_menu_page.py  key_presses_page.py  notification_message_page.py  redirector_page.py  shifting_content_image_page.py  slow_resources_page.py  status_codes_page.py
pages/components/: flash.py
pages/core/: __init__.py  base_page.py  pw_base_page.py
pages/example/: __init__.py  homepage.py  pw_homepage.py
pages/internet/: __init__.py  ab_test_page.py  add_remove_elements_page.py  basic_auth_page.py  broken_images_page.py  challenging_dom_page.py  checkboxes_page.py  context_menu_page.py  digest_auth_page.py  disappearing_elements_page.py  drag_and_drop_page.py  dropdown_page.py  dynamic_content_page.py  dynamic_controls_page.py  dynamic_loading_page.py  homepage.py  (+79 more)
tests/: test_challenging_dom.py  test_entry_ad.py  test_geolocation.py  test_homepage.py  test_hovers.py  test_iframe.py  test_infinite_scroll.py  test_inputs.py  test_javascript_error.py  test_jqueryui_menu.py  test_key_presses.py  test_large_dom.py  test_notification_message.py  test_redirector.py  test_secure_file_download.py  test_shifting_content_image.py  test_shifting_content_menu.py  test_sortable_tables.py  test_tinymce_ai_docs.py  test_windows.py
(+100 files in other folders)
