[project]
name = "selenium-pytest-pageobject"
version = "1.0.0"
description = "Cross-browser Selenium test suite using pytest and the Page Object Model"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"

dependencies = [
    "pytest>=8.0,<10.0",
    "pytest-xdist>=3.5",
    "selenium>=4.25",
    "webdriver-manager>=4.0",
    "playwright>=1.50",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pages", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
markers = [
    "no_safari: skip test when running under Safari (e.g. CDP-only features)",
    "playwright: marks tests that run with Playwright instead of Selenium",
]
